--- a/application/views/scripts/model/view.phtml
+++ b/application/views/scripts/model/view.phtml
@@ -10,28 +10,22 @@
 </div>
 
 <?php if ($this->photosets): ?>
-    <ul id="photosets" class="clearfix">
+<div class="row">
 
-        <?php foreach ($this->photosets as $photoset): ?>
-        <li class="<?php echo $photoset->manual_thumbnail ? '' : 'autoThumb'; ?>">
-
-                <div class="image">
-                    <a href="<?php echo $this->url(array('controller' => 'gallery', 'action' => 'view', 'photoset' => $photoset->id),null, true); ?>">
-                        <img src="<?php echo $this->url(array('controller'=>'image', 'action'=>'thumbnail', 'id'=>rawurlencode($photoset->thumbnail))); ?>" />
-                    </a>
-                </div>
+    <?php foreach ($this->photosets as $photoset): ?>
+    <div class="col-xs-4 col-sm-3 col-md-2">
+        <a href="<?php echo $this->url(array('controller'=>'gallery', 'action'=>'view', 'photoset' => $photoset->id), null, true); ?>" class="thumbnail">
+            <div class="image">
+                <img src="<?php echo $this->url(array('controller'=>'image', 'action'=>'thumbnail', 'id'=>rawurlencode($photoset->thumbnail))); ?>" />
                 <div class="name">
-                    <?php if (! $photoset->manual_thumbnail): ?>
-                        <div class="right">
-                            <a href="<?php echo $this->url(array('controller' => 'gallery', 'action' => 'thumbnail', 'photoset' => $photoset->id), null, true); ?>">Thumb</a>
-                        </div>
-                    <?php endif; ?>
-                    <div class="text"><?php echo $photoset->name; ?></div>
+                    <?php echo $photoset->name ;?>
                 </div>
-
-        </li>
-        <?php endforeach; ?>
-    </ul>
+            </div>
+        </a>
+    </div>
+    <?php endforeach; ?>
+        
+</div>
 <?php endif; ?>
 
 <?php echo $this->partial('pagination.phtml', array('paginator' => $this->paginator))?>
