--- a/application/views/scripts/gallery/view.phtml
+++ b/application/views/scripts/gallery/view.phtml
@@ -13,7 +13,7 @@
 <?php echo $this->photoset->name; ?>
 
 <?php if ($this->files): ?>
-    <ul id="photosets" class="clearfix">
-        <?php echo $this->partialLoop('GalleryPartial.phtml', $this->files); ?>
-    </ul>
+<div class="row">
+    <?php echo $this->partialLoop('GalleryPartial.phtml', $this->files); ?>
+</div>
 <?php endif; ?>
