--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -8,6 +8,7 @@
 
 <div class="row">
     <div class="col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">
+	<div class="row">
         <?php
             foreach ($this->modelKeys as $modelKey):
                 $model = $this->models[$modelKey];
@@ -54,5 +55,6 @@
             </div>
         </div>
         <?php endforeach; ?>
+	</div>
     </div>
 </div>
