--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -29,17 +29,19 @@
                         <div>
                             <a href="<?php echo $this->url(array('controller' => 'gallery', 'action' => 'thumbnail', 'id' => $model->ID, 'photoset' => $photoset->id)); ?>" class="<?php echo $photoset->manual_thumbnail ? '' : 'text-danger'; ?>"><?php echo $photoset->manual_thumbnail ? 'Manual' : 'Auto'; ?> Thumbnail</a>
                         </div>
-                        <div>
-                            Rank = <?php echo $model->ranking; ?> (<?php echo count($this->models->toArray()); ?>)
+                        <div class="pull-left">
+                            <i class="fa fa-star-o"></i> <?php echo $model->ranking; ?> <span class="badge"><?php echo count($this->models->toArray()); ?></span>&nbsp;
                         </div>
-                        <div>
-                            Photosets = <?php echo count($model->photosets); ?>
+                        <div class=""pull-left">
+                            <i class="fa fa-picture-o"></i> <?php echo count($model->photosets); ?>&nbsp;
                         </div>
                         <form action="<?php echo $this->url(array('action' => 'ranking')); ?>" method="post">
-                            <div>
+                            <div class="checkbox">
+                                <label>`
                                 <input type="checkbox" id="search<?php echo $model->ID; ?>" name="search"<?php echo $model->search ? ' checked="checked"' : ''; ?> />
-                                <label for="search<?php echo $model->ID; ?>">Search</label>
-                                <?php echo $this->date($model->datesearched); ?>
+                                <i class="fa fa-search"></i> <?php echo $this->date($model->datesearched); ?>
+                                </label>
+                                
                             </div>
                             <!-- Stats
                             <a href="weblinks.php?action=0&model={$link.id}">WL = {$link.weblinks}</a>
@@ -47,7 +49,7 @@
                             <a href="weblinks.php?action=6&model={$link.id}">WI = {$link.webimages}</a>
                              -->
                             <input type="hidden" name="model_id" value="<?php echo $model->ID; ?>" />
-                            <button type="submit" class="btn btn-primary btn-block">God Like!</button>
+                            <button type="submit" class="btn btn-primary btn-block"><i class="fa fa-thumbs-o-up"></i> God Like!</button>
                         </form>
 
                         <?php //var_dump($model->getWebLinkStats()->toArray() ); ?>
