Removing odd character

--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -37,7 +37,7 @@
                         </div>
                         <form action="<?php echo $this->url(array('action' => 'ranking')); ?>" method="post">
                             <div class="checkbox">
-                                <label>`
+                                <label>
                                 <input type="checkbox" id="search<?php echo $model->ID; ?>" name="search"<?php echo $model->search ? ' checked="checked"' : ''; ?> />
                                 <i class="fa fa-search"></i> <?php echo $this->date($model->datesearched); ?>
                                 </label>
