--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -5,11 +5,12 @@
             <div class="panel-heading">
                 <h2>Log in</h2>
             </div>
-            <div class="panel-body"></div>
+            <div class="panel-body">
 <?php
 //$this->title = "Log in";
 $this->headTitle('Log in');
 echo $this->form; ?>
+            </div>
         </div>
     </div>
 </div>
