--- a/public/css/site.css
+++ b/public/css/site.css
@@ -217,11 +217,10 @@ ul#ranking li div.image {
     overflow-x: hidden;
 }
 
-.row {
+.row, .form-horizontal .form-group {
     margin-left: -5px;
     margin-right: -5px;
 }
-
 
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, 
 .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, 
