--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-4 col-sm-6 col-md-offset-4 col-sm-offset-3">
+    <div class="col-md-4 col-sm-6 col-xs-10 col-md-offset-4 col-sm-offset-3 col-xs-offset-1">
                     
         <div class="panel panel-default">
             <div class="panel-heading">
