--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -3,7 +3,7 @@
                     
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h2>Log in</h2>
+                <h2>Log in <i class="fa fa-sign-in"></i></h2>
             </div>
             <div class="panel-body">
 <?php
