--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -5,4 +5,7 @@ $load = sys_getloadavg();
     <div class="pull-left">
     <?php echo $load[0].','.$load[1].','.$load[2]; ?>
     </div>
+    <div class="pull-right">
+        <?php echo $this->mode; ?>
+    </div>
 </div>
