--- a/application/views/scripts/model/add.phtml
+++ b/application/views/scripts/model/add.phtml
@@ -1,1 +1,14 @@
+<style>
+    form#model:after {
+        content: " ";
+        display: block;
+        clear: both;
+        }
+</style>
+
+<?php 
+$this->title = 'Add Model';
+$this->headTitle('Add Model');
+?>
+
 <?php echo $this->form; ?>
