--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -3,7 +3,9 @@ $load = sys_getloadavg();
 ?>
 <div class="row">
     <div class="pull-left">
-    <?php echo $load[0].','.$load[1].','.$load[2]; ?>
+        <?php if (Zend_Auth::getInstance()->hasIdentity()): ?>
+            <?php echo $load[0].','.$load[1].','.$load[2]; ?>
+        <?php endif; ?>
     </div>
     <div class="pull-right">
         <?php echo $this->mode; ?>
