--- a/application/layouts/scripts/partials/navigation.phtml
+++ b/application/layouts/scripts/partials/navigation.phtml
@@ -4,9 +4,10 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
+                <!--<span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>-->
+                <i class="fa fa-bars"></i>
             </button>
         <a class="navbar-brand" href="<?php echo $this->url(array('controller' => 'index', 'action' => 'index'),null ,true); ?>"><i class="fa fa-leaf"></i> Goddesses</a>
         </div>
@@ -25,7 +26,7 @@
                 <?php if (Zend_Auth::getInstance()->hasIdentity()): ?>
                 <li><a href="<?php echo $this->url(array('controller' => 'auth', 'action' => 'logout'),null ,true); ?>">Log out <i class="fa fa-sign-out"></i></a></li>
                 <?php else: ?>
-                <li><a href="<?php echo $this->url(array('controller' => 'auth', 'action' => 'login'),null ,true); ?>">Log in</a></li>
+                <li><a href="<?php echo $this->url(array('controller' => 'auth', 'action' => 'login'),null ,true); ?>">Log in <i class="fa fa-sign-in"></i></a></li>
                 <?php endif;?>
             </ul>
             
