Model Ranking check added.

--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -48,6 +48,7 @@
                             <a href="weblinks.php?action=6&model={$link.id}">WI = {$link.webimages}</a>
                              -->
                             <input type="hidden" name="model_id" value="<?php echo $model->ID; ?>" />
+                            <input type="hidden" name="model_ranking" value="<?php echo $model->ranking; ?>" />
                             <button type="submit" class="btn btn-primary btn-block"><i class="fa fa-thumbs-o-up"></i> God Like!</button>
                         </form>
 
