--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -15,7 +15,9 @@
                 ->appendStylesheet($this->baseUrl().'/css/site.css'); ?>
         <?php echo $this->headScript()
                 ->appendFile('//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
-                ->appendFile('//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'); ?>
+                ->appendFile('//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+                ->appendFile($this->baseUrl().'/js/jquery.equalheights.js')
+                ->appendFile($this->baseUrl().'/js/site.js'); ?>
         <!-- Designed Fro BlackBerry 320px width - 8px scrollbar -->
         <meta name="viewport" content="width=312; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
     </head>
