--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -26,7 +26,7 @@
                         </strong>
 
                         <div class="pull-right">
-                             <a href="<?php echo $this->url(array('controller' => 'gallery', 'action' => 'thumbnail', 'id' => $model->ID, 'photoset' => $photoset->id)); ?>" class="<?php echo $photoset->manual_thumbnail ? 'text-success' : 'text-danger'; ?>"><i class="<?php echo $photoset->manual_thumbnail ? 'fa fa-flag' : 'fa fa-flag-o'; ?>"></i></a>
+                             <a href="<?php echo $this->url(array('controller' => 'gallery', 'action' => 'thumbnail', 'id' => $model->ID, 'photoset' => $photoset->id)); ?>" class="<?php echo $photoset->manual_thumbnail ? 'text-success' : 'text-danger'; ?>"><i class="<?php echo $photoset->manual_thumbnail ? 'fa fa-check' : 'fa fa-times'; ?>"></i></a>
                         </div>
                         <div class="pull-left">
                             <i class="fa fa-thumbs-o-up"></i> <?php echo $model->ranking; ?> <span class="badge"><i class="fa fa-star"></i> <?php echo count($this->models->toArray()); ?></span>&nbsp;
