--- a/application/views/scripts/web-resource/index.phtml
+++ b/application/views/scripts/web-resource/index.phtml
@@ -1,3 +1,8 @@
+<?php
+    $this->title = 'Web Resources';
+    $this->headTitle('Web Resources');
+?>
+
 <?php if ($this->webResources): ?>
 <table class="table table-striped">
     <thead>
