--- a/application/views/scripts/web-url/index.phtml
+++ b/application/views/scripts/web-url/index.phtml
@@ -1,64 +1,26 @@
+<?php if ($this->model) : ?>
+    <?php
+        $this->title = $this->model->getName();
+        $this->headTitle($this->model->getName());
+    ?>
+    <?php $this->model->getName(); ?>
+
+    <?php echo $this->partial('model/partials/navigation.phtml', array('model' => $this->model, 'active' => 'weburl')); ?>
+<?php endif; ?>
+
+<?php if ($this->webresource): ?>
+    <?php
+        $this->title = $this->webresource->website;
+        $this->headTitle($this->webresource->website);
+    ?>
+<?php endif; ?>
+
+<?php
+    $this->subtitle = 'Web Urls';
+    $this->headTitle('Web Urls');
+?>
+
 <?php if ($this->webUrls): ?>
-<!--
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>id</th>
-            <th>url</th>
-            <th>status</th>
-            <th>action</th>
-            <th>Names</th>
-            <th>linked</th>
-            <th>date</th>
-        </tr>
-    </thead>
-    <tbody>
-    <?php foreach ($this->webUrls as $url): ?>
-        <tr>
-            <td><a href="<?php echo $this->url(array('controller' => 'web-url', 'action' => 'test', 'id' => $url->id), 'default', true); ?>"><?php echo $url->id; ?></a></td>
-            <td><?php echo $url->url; ?></td>
-            <td><?php echo $url->httpStatusCode; ?></td>
-            <td>
-                <select>
-                    <option value="" <?php echo $url->action == God_Model_WebURLTable::ACTION_NEW_URL ? 'selected="selected"' : ''; ?>>New Url</option>
-                    <option value="" <?php echo $url->action == God_Model_WebURLTable::ACTION_GOT_THUMBNAILS ? 'selected="selected"' : ''; ?>>Get Thumbnails</option>
-                    <option value="" <?php echo $url->action == God_Model_WebURLTable::ACTION_GOT_THUMBNAILS ? 'selected="selected"' : ''; ?>>Got Thumbnails</option>
-                    <option value="" <?php echo $url->action == God_Model_WebURLTable::ACTION_THUMBNAIL_ISSUE ? 'selected="selected"' : ''; ?>>Thubmnail Issue</option>
-                </select>
-            <?php echo $url->action; ?>
-
-            </td>
-            <td>
-            <?php if ($url->ModelNameWebURL): ?>
-                <ul class="list-unstyled">
-                <?php foreach ($url->ModelNameWebURL as $modelNameLink): ?>
-                    <li><a href="<?php echo $this->url(array('controller'=>'model', 'action'=>'edit', 'id' => $modelNameLink->modelName->model->ID), 'default', true); ?>"><?php echo $modelNameLink->modelName->model->getName();?></a></li>
-                <?php endforeach; ?>
-                </ul>
-            <?php endif; ?>
-            </td>
-            <td><?php echo $url->linked; ?></td>
-            <td><?php echo $this->date($url->dateCreated, Coda_View_Helper_Date::DATETIME); ?></td>
-        </tr>
-        <?php
-            $thumbnails = unserialize($url->thumbnails);
-            if ($thumbnails):
-        ?>
-        <tr>
-            <td colspan="7">
-            <?php foreach($thumbnails as $thumbnail): ?>
-            <a href="/image/external?referer=<?php echo $url->url; ?>&url=<?php echo renderpath($url->url, $thumbnail); ?>">
-                <img src="/image/external?referer=<?php echo $url->url; ?>&url=<?php echo renderpath($url->url, $thumbnail); ?>&width=80" />
-            </a>
-            <?php endforeach; ?>
-            </td>
-        </tr>
-        <?php endif; ?>
-
-    <?php endforeach; ?>
-    </tbody>
-</table>
--->
 
 <?php foreach ($this->webUrls as $url): ?>
 <div class="row">
@@ -78,7 +40,7 @@
         <?php if ($url->ModelNameWebURL): ?>
         <ul class="list-unstyled">
         <?php foreach ($url->ModelNameWebURL as $modelNameLink): ?>
-            <li><a href="<?php echo $this->url(array('controller'=>'model', 'action'=>'edit', 'id' => $modelNameLink->modelName->model->ID), 'default', true); ?>"><?php echo $modelNameLink->modelName->model->getName();?></a></li>
+            <li><a href="<?php echo $this->url(array('controller'=>'web-url', 'action'=>'index', 'modelid' => $modelNameLink->modelName->model->ID), 'default', true); ?>"><?php echo $modelNameLink->modelName->model->getName();?></a></li>
         <?php endforeach; ?>
         </ul>
         <?php endif; ?>
