--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -63,3 +63,5 @@
 <ul id="menu" class="clearfix">
     <li><a href="<?php echo $this->url(array('action' => 'ranking'));?>">Try Again</a></li>
 </ul>
+
+<?php echo implode(', ', $this->modes); ?>
