Redirect to original url after successful login.

--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -10,6 +10,7 @@
 //$this->title = "Log in";
 $this->headTitle('Log in');
 echo $this->form; ?>
+                <?php _d($_SESSION['requestUrl']); ?>
             </div>
         </div>
     </div>
